# forever-claude-template

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.nixos  MULTI_HARNESS_FUNCTIONALITY_MATRIX.md  MULTI_HARNESS_PROJECT_PLAN.md  PURPOSE.md  README.md  SOUL.md  flake.nix  harness-portability-analysis.md  openhost.toml  parent.toml  pyproject.toml  services.toml  style_guide.md  supervisord.conf  test_docker_image_contract.py  test_meta_ratchets.py  test_mngr_cli_argv_contract.py  test_mngr_template_stacking.py  test_skill_mngr_references.py
apps/system_interface/: AUDIT.md  README.md  conftest.py  pyproject.toml  test_claude_settings_env_auth.py
apps/system_interface/changelog/: browser-fleet-improvements.md  carl-skip-slow-turn.md  feat-agentic-browser-fleet.md  feat-collapse-system-injected-messages.md  feat-message-kinds-collapse.md  feat-new-browser-cdp.md  gabriel-activity-indicator.md  gabriel-belligerent-earwig.md  gabriel-error-reporting-continued.md  gabriel-fix-flaky-client-activity-leak.md  gabriel-little-kittiwake.md  gabriel-observe-pid-watch.md  gabriel-oom-earlyoom.md  gabriel-permission-requests.md  gabriel-restarting-issue.md  gabriel-sign-in-button-issue.md  gabriel-stopped-agent.md  gabriel-system-interfac.md  gabriel-visionary-goshawk.md  gabriel-yellow-pony.md  haiku-fast-retry-skip.md  mngr-add-dockview-profiles.md  mngr-better-chat-auth.md  mngr-fix-minds-providers-errors.md  mngr-fix-permission-spacing.md  mngr-frontend-guard-interrupt-resend.md  mngr-minds-api-final.md  mngr-per-provider-discovery.md  mngr-persistent-terminals.md  mngr-remove-workspace-async.md  preston-agent-state-fix.md  preston-chat-image-caching.md  preston-chat-image-change-detection.md  preston-minds-file-uploads.md  preston-minds-md-images.md  preston-nightly-agent.md  preston-wake-reconnect.md  system-interface-visual-refresh.md  wz-di-seams-refactor.md  wz-message-cache-agent-match.md  (+3 more)
apps/system_interface/docs/: audit_pr2_backpressure_investigation.md  pr3_frontend_refactor_investigation.md  scaling-design.md
apps/system_interface/frontend/: _tooltip_harness.html  index.html  package.json  vite.config.ts
apps/system_interface/frontend/src/: base-path.ts  index.ts  lightbox.ts  lint-and-format.test.ts  markdown.test.ts  markdown.ts  reload.ts  style.css
apps/system_interface/frontend/tools/: write-source-hash.mjs
apps/system_interface/imbue/minds_workspace_server/: agent_discovery.py  agent_discovery_test.py  agent_manager.py  agent_manager_test.py  claude_auth.py  claude_auth_endpoints.py  claude_auth_endpoints_test.py  claude_auth_test.py  layout_ops.py  layout_ops_test.py  models.py  request_writer.py  request_writer_test.py  server.py  server_test.py  session_parser.py  session_parser_test.py  session_watcher.py  session_watcher_test.py  test_layout_pipeline.py  test_ratchets.py  testing.py  tickets_parser.py  tickets_parser_test.py  tickets_watcher.py  tickets_watcher_test.py  welcome_resend_test.py  ws_broadcaster.py  ws_broadcaster_test.py
apps/system_interface/imbue/system_interface/: activity_caption.py  activity_caption_test.py  activity_state.py  activity_state_test.py  activity_watcher.py  activity_watcher_test.py  agent_discovery.py  agent_discovery_test.py  agent_manager.py  agent_manager_test.py  app_context.py  attachments.py  attachments_test.py  chat_file_snapshots.py  chat_file_snapshots_test.py  chat_file_timestamps.py  chat_file_timestamps_test.py  chat_image_snapshots.py  chat_image_snapshots_test.py  chat_reviver.py  chat_reviver_test.py  claude_activity_state.py  claude_activity_state_test.py  claude_auth.py  claude_auth_endpoints.py  claude_auth_endpoints_test.py  claude_auth_patterns.py  claude_auth_test.py  claude_session_parser.py  claude_session_parser_test.py  client_activity.py  (+64 more)
libs/ai_integration/: README.md  pyproject.toml  test_ai_integration_ratchets.py
libs/app_watcher/: README.md  pyproject.toml  test_app_watcher_ratchets.py
libs/bootstrap/: README.md  pyproject.toml  test_bootstrap_ratchets.py
libs/bootstrap/changelog/: mngr-injected-backup-service.md  preston-adopt-partial-create.md  preston-minds-inspirations.md  preston-nightly-agent.md  wz-message-location-from-observe.md
libs/browser/: README.md  browser_test.py  conftest.py  fleet_test.py  manifest_test.py  names_test.py  oom_retag_test.py  pyproject.toml  session_test.py  test_browser_integration.py  test_browser_ratchets.py
libs/browser/changelog/: browser-fleet-improvements.md  deferred-install-fortress-arm64.md  feat-agentic-browser-fleet.md  feat-collapse-fleet-nudges.md  feat-fleet-nudge-sentinel.md  feat-new-browser-cdp.md  preston-nightly-agent.md
libs/cloudflare_tunnel/: README.md  pyproject.toml  test_cloudflare_tunnel_ratchets.py
libs/github_sync/: README.md  pyproject.toml  test_github_sync_ratchets.py
libs/host_backup/: README.md  pyproject.toml  test_host_backup_ratchets.py  test_local_restic.py
libs/host_backup/changelog/: gabriel-bipedal-parakeet.md  gabriel-sapphire-crane.md  mngr-account-association.md  mngr-bare-metal-staging.md  mngr-injected-backup-service.md
libs/inbox_digest/: README.md  pyproject.toml
libs/memory_watchdog/: OOM_DRILL.md  README.md  pyproject.toml  test_memory_watchdog_ratchets.py
libs/mngr_cli_contract/: README.md  pyproject.toml
libs/oom_priority/: OOM_DRILL.md  README.md  pyproject.toml
libs/oom_priority/changelog/: gabriel-liberal-woodlouse.md
libs/pr_review/: README.md  conftest.py  pyproject.toml  test_pr_review.py
libs/runtime_backup/: README.md  pyproject.toml  test_runtime_backup_ratchets.py
libs/scheduler/: README.md  SCHEDULER_LIBRARY_EVALUATION.md  pyproject.toml  test_scheduler_ratchets.py
libs/telegram_bot/: README.md  bot_test.py  pyproject.toml  test_telegram_bot_ratchets.py
libs/tk_command_parsing/: README.md  pyproject.toml
libs/web_server/: README.md  pyproject.toml  test_web_server_ratchets.py
libs/web_server/changelog/: mngr-remove-workspace-async.md
tests/openhost/: conftest.py  pyproject.toml  test_app.py
(+624 files in other folders)
