[project]
name = "system-interface"
version = "0.1.0"
description = "Web chat interface for mngr-managed Claude agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "flask-sock>=0.7",
    "httpx>=0.27",
    "imbue-common",
    "imbue-mngr",
    "imbue-mngr-claude",
    "pexpect>=4.9",
    "pluggy>=1.5",
    "pydantic-settings>=2.13.1",
    "simple-websocket>=1.0",
    "tk-command-parsing",
    "watchdog>=4.0",
    "werkzeug>=3.0",
]
license = {text = "FCL-1.0-MIT"}
license-files = [
    "LICENSE",
]

[dependency-groups]
dev = [
    "playwright>=1.40",
    "pytest-playwright>=0.4",
    # Test infrastructure used by imbue.imbue_common.conftest_hooks
    # (previously provided transitively by vendor/mngr's uv workspace dev group)
    "pytest>=9.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.3.0",
    "coverage",
    "inline-snapshot>=0.13",
    "resource-guards",
    # Shared mngr CLI argv validator used by the per-feature contract tests
    # (agent_manager_test, claude_auth_test, server_test).
    "mngr-cli-contract",
    "import-linter>=2.0",
    "ruff~=0.12.8",
    # Used by check_no_type_errors in test_ratchets.py. Pinned to 0.0.24 because
    # that is the version the source was last verified clean against in
    # vendor/mngr's uv.lock; newer versions surface stricter checks that don't
    # match what this code was reviewed under.
    "ty==0.0.24",
]

[project.scripts]
system-interface = "imbue.system_interface.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = [
    "imbue/system_interface/static/**",
]

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

# Shared pytest settings (markers, filterwarnings, coverage report config)
# are centralized in:
#   libs/imbue_common/imbue/imbue_common/conftest_hooks.py
# The settings below remain here because they are read from pyproject.toml
# before any hooks run: addopts, coverage.run, inline-snapshot, timeout_func_only.
[tool.pytest.ini_options]
timeout_func_only = true
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "--cov=imbue.system_interface",
  "--cov-report=term-missing",
  "--cov-report=xml",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing", "thread"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
strict = ["**/*.py"]

# Ruff config mirrors vendor/mngr/pyproject.toml so that lint/isort behavior
# matches what this code was previously checked under (it was a workspace
# member of vendor/mngr before being promoted into apps/system_interface).
[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "I",
    "UP006",
    "UP007",
]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = true
case-sensitive = true
order-by-type = false
known-first-party = [
    "imbue",
    "imbue_common",
    "mngr",
]

[tool.coverage.report]
fail_under = 75
