[project]
name = "ai-integration"
version = "0.1.0"
description = "Helpers for calling Claude from services: implicit API-key/claude -p routing, credential + env normalization, billing-path logging, and per-service spend control"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "anyio>=4",
    "loguru>=0.7.0",
    "imbue-common",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_integration"]
