[project]
name = "bootstrap"
version = "0.1.0"
description = "Service manager for forever-claude"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
bootstrap = "bootstrap.manager:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bootstrap"]
