[project]
name = "browser"
version = "0.1.0"
description = "Live Chromium with human-in-the-loop control and a browser-use agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-sock>=0.7",
    "simple-websocket>=1.0",
    "werkzeug>=3.0",
    "browser-use[core]==0.13.1",
]

# Entry point is "browser-service", not "browser": browser-use ships its own
# "browser" console script, which would otherwise shadow this one. The fleet CLI
# (agentic-browser-fleet) is what agents call to drive the browsers.
[project.scripts]
browser-service = "browser.runner:main"
agentic-browser-fleet = "browser.fleet:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser"]
