[project]
name = "cloudflare-tunnel"
version = "0.1.0"
description = "Service that watches for a Cloudflare tunnel token and runs cloudflared"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cloudflare-tunnel = "cloudflare_tunnel.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cloudflare_tunnel"]
