[project]
name = "host-backup"
version = "0.1.0"
description = "Continuous restic-based backup of the agent's host_dir (/mngr/) to a remote repository (R2 by default)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.0",
    "imbue-common",
    "click>=8.1",
    "tomlkit>=0.12",
]

[project.scripts]
host-backup = "host_backup.runner:main"
host-backup-now = "host_backup.cli:backup_now_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/host_backup"]
