[project]
name = "inbox-digest"
version = "0.1.0"
description = "Flat, type-aware digest of your unread Gmail inbox"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
]

[project.scripts]
inbox-digest = "inbox_digest.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inbox_digest"]
