[project]
name = "mngr-cli-contract"
version = "0.1.0"
description = "Test-only validator that checks mngr CLI argvs against the live mngr command tree"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "imbue-mngr",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mngr_cli_contract"]
