[project]
name = "pr-review"
version = "0.1.0"
description = "A cleaner interface for reviewing your GitHub pull requests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "flask-sock>=0.7",
    "werkzeug>=3.0",
    "jedi>=0.19",
]

[project.scripts]
pr-review = "pr_review.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pr_review"]
