[project]
name = "scheduler"
version = "0.1.0"
description = "File-driven task scheduler with offline catch-up for the agent workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbue-common",
    "click>=8.1",
    "croniter>=2.0",
    "loguru>=0.7.0",
    "pydantic>=2.0",
    "tomlkit>=0.12",
]

[project.scripts]
scheduler = "scheduler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scheduler"]
