[project]
name = "telegram-bot"
version = "0.1.0"
description = "Telegram bot and send CLI for forever-claude"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.0",
]

[project.scripts]
telegram-bot = "telegram_bot.bot:main"
telegram-send = "telegram_bot.send:main"
telegram-history = "telegram_bot.history:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_bot"]
