[project]
name = "tk-command-parsing"
version = "0.1.0"
description = "Shell-aware (shlex-based) parser for tk/ticket command invocations, shared by the progress-view tooling. Stdlib-only so the PreToolUse gate hook can import it under a bare python3."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tk_command_parsing"]
