[project]
name = "web-server"
version = "0.1.0"
description = "Default example Flask web server shipped with the template"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0",
    "werkzeug>=3.0",
]

[project.scripts]
web-server = "web_server.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/web_server"]
