[project]
name = "minds-openhost-tests"
version = "0.1.0"
description = "Harness tests for running this workspace template as an OpenHost app"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    # Builds the app's Dockerfile, deploys it through the real OpenHost router
    # install path, and fronts it with real subdomain routing + owner auth.
    # Requires podman on the host.
    "openhost[test-harness] @ git+https://github.com/imbue-openhost/openhost@main",
]

[tool.pytest.ini_options]
testpaths = ["."]
